// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Resolvers Pipeline Function should generate Resources with sync configuration 1`] = `
Object {
  "GraphQlFunctionConfigurationmyFunction": Object {
    "Properties": Object {
      "ApiId": Object {
        "Fn::GetAtt": Array [
          "GraphQlApi",
          "ApiId",
        ],
      },
      "DataSourceName": Object {
        "Fn::GetAtt": Array [
          "GraphQlDsmyLambdaFunction",
          "Name",
        ],
      },
      "Description": undefined,
      "FunctionVersion": "2018-05-29",
      "MaxBatchSize": undefined,
      "Name": "myFunction",
      "RequestMappingTemplate": "Content of path/to/mappingTemplates/myFunction.request.vtl",
      "ResponseMappingTemplate": "Content of path/to/mappingTemplates/myFunction.response.vtl",
      "SyncConfig": Object {
        "ConflictDetection": "VERSION",
        "ConflictHandler": "LAMBDA",
        "LambdaConflictHandlerConfig": Object {
          "LambdaConflictHandlerArn": Object {
            "Fn::GetAtt": Array [
              "MyFunctionUnderscoreSyncLambdaFunction",
              "Arn",
            ],
          },
        },
      },
    },
    "Type": "AWS::AppSync::FunctionConfiguration",
  },
}
`;

exports[`Resolvers Pipeline Function should generate Resources with sync configuration 2`] = `
Object {
  "myFunction_Sync": Object {
    "handler": "index.handler",
  },
}
`;

exports[`Resolvers Pipeline Resovlers should generate Resources with default mapping templates 1`] = `
Object {
  "GraphQlResolverQueryuser": Object {
    "DependsOn": Array [
      "GraphQlSchema",
    ],
    "Properties": Object {
      "ApiId": Object {
        "Fn::GetAtt": Array [
          "GraphQlApi",
          "ApiId",
        ],
      },
      "FieldName": "user",
      "Kind": "PIPELINE",
      "PipelineConfig": Object {
        "Functions": Array [
          Object {
            "Fn::GetAtt": Array [
              "GraphQlFunctionConfigurationfunction1",
              "FunctionId",
            ],
          },
          Object {
            "Fn::GetAtt": Array [
              "GraphQlFunctionConfigurationfunction2",
              "FunctionId",
            ],
          },
        ],
      },
      "RequestMappingTemplate": "Content of path/to/mappingTemplates/Query.user.request.vtl",
      "ResponseMappingTemplate": "Content of path/to/mappingTemplates/Query.user.response.vtl",
      "TypeName": "Query",
    },
    "Type": "AWS::AppSync::Resolver",
  },
}
`;

exports[`Resolvers Pipeline Resovlers should generate Resources with specific mapping templates 1`] = `
Object {
  "GraphQlResolverQueryuser": Object {
    "DependsOn": Array [
      "GraphQlSchema",
    ],
    "Properties": Object {
      "ApiId": Object {
        "Fn::GetAtt": Array [
          "GraphQlApi",
          "ApiId",
        ],
      },
      "FieldName": "user",
      "Kind": "PIPELINE",
      "PipelineConfig": Object {
        "Functions": Array [
          Object {
            "Fn::GetAtt": Array [
              "GraphQlFunctionConfigurationfunction1",
              "FunctionId",
            ],
          },
          Object {
            "Fn::GetAtt": Array [
              "GraphQlFunctionConfigurationfunction2",
              "FunctionId",
            ],
          },
        ],
      },
      "RequestMappingTemplate": "Content of path/to/mappingTemplates/specific.request.tpl",
      "ResponseMappingTemplate": "Content of path/to/mappingTemplates/specific.response.tpl",
      "TypeName": "Query",
    },
    "Type": "AWS::AppSync::Resolver",
  },
}
`;

exports[`Resolvers Unit Resolvers should generate Resources with sync configuration 1`] = `
Object {
  "GraphQlResolverQueryuser": Object {
    "DependsOn": Array [
      "GraphQlSchema",
    ],
    "Properties": Object {
      "ApiId": Object {
        "Fn::GetAtt": Array [
          "GraphQlApi",
          "ApiId",
        ],
      },
      "DataSourceName": Object {
        "Fn::GetAtt": Array [
          "GraphQlDsmyLambdaFunction",
          "Name",
        ],
      },
      "FieldName": "user",
      "Kind": "UNIT",
      "MaxBatchSize": undefined,
      "RequestMappingTemplate": "Content of path/to/mappingTemplates/Query.user.request.vtl",
      "ResponseMappingTemplate": "Content of path/to/mappingTemplates/Query.user.response.vtl",
      "SyncConfig": Object {
        "ConflictDetection": "VERSION",
        "ConflictHandler": "LAMBDA",
        "LambdaConflictHandlerConfig": Object {
          "LambdaConflictHandlerArn": Object {
            "Fn::GetAtt": Array [
              "QueryUnderscoreuserUnderscoreSyncLambdaFunction",
              "Arn",
            ],
          },
        },
      },
      "TypeName": "Query",
    },
    "Type": "AWS::AppSync::Resolver",
  },
}
`;

exports[`Resolvers Unit Resolvers should generate Resources with sync configuration 2`] = `
Object {
  "Query_user_Sync": Object {
    "handler": "index.handler",
  },
}
`;
